# esp-drone

./: .cproject  .project  CMakeLists.txt  README.md
main/: Kconfig.projbuild  main.c
my_components/config/include/: config.h
my_components/core/crazyflie/: CMakeLists.txt
my_components/core/crazyflie/hal/interface/: blelink.h  pm_esplane.h
my_components/core/crazyflie/hal/src/: blelink.c  pm_esplane.c  sensors_mpu6050_hm5883L_ms5611.c
my_components/core/crazyflie/modules/src/: comm.c  system.c
my_components/drivers/bosch/: CMakeLists.txt  bstdr_comm_support.c
my_components/drivers/general/ble/: CMakeLists.txt  ble_esp32.cpp
my_components/drivers/general/ble/include/: ble_esp32.h
my_components/drivers/general/ble_hal/: BLEAddress.cpp  BLEAdvertisedDevice.cpp  BLEAdvertising.cpp  BLEBeacon.cpp  BLECharacteristic.cpp  BLECharacteristicMap.cpp  BLEClient.cpp  BLEDescriptor.cpp  BLEDescriptorMap.cpp  BLEDevice.cpp  BLEEddystoneTLM.cpp  BLEEddystoneURL.cpp  BLERemoteCharacteristic.cpp  BLERemoteDescriptor.cpp  BLERemoteService.cpp  BLEScan.cpp  BLEServer.cpp  BLEService.cpp  BLEUUID.cpp  BLEUtils.cpp  BLEValue.cpp  CMakeLists.txt  FreeRTOS.cpp  GeneralUtils.cpp
my_components/drivers/general/ble_hal/include/: BLEAdvertising.h  BLEServer.h  BLEUtils.h  FreeRTOS.h  UnitiBLE.h
my_components/drivers/general/led/: CMakeLists.txt  ws2812b_esp32.c
my_components/drivers/general/led/include/: ws2812b_esp32.h
my_components/drivers/general/wifi/: wifi_esp32.c
